task1/kubernetes_project/host-based-ingress.yaml
# host based ingress routing
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-cluster-ingress
spec:
  rules:
  - host: foobar.com
    http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             # link service of pods to rout ingress to service
             service:
               name: http-svc
               port:
                 - number: 80
  - host: foo.bar.com
    http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: pod-service
               port:
                 - number: 80
